; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.set.c_setv.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.set.c_setv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shvhed = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setv(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32**, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = call i32** @xmalloc(i32 16)
  store i32** %8, i32*** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32**, i32*** %7, align 8
  %11 = getelementptr inbounds i32*, i32** %10, i64 0
  store i32* %9, i32** %11, align 8
  %12 = load i32**, i32*** %7, align 8
  %13 = getelementptr inbounds i32*, i32** %12, i64 1
  store i32* null, i32** %13, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = load i32**, i32*** %7, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @set1(i32* %14, i32** %15, i32* @shvhed, i32 %16)
  ret void
}

declare dso_local i32** @xmalloc(i32) #1

declare dso_local i32 @set1(i32*, i32**, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
